[package]
name = "rust-wasm-hello"
description = "This is a Rust WASM minimal template"
version = "0.1.0"
authors = ["Celso Jr <celsojrfull@gmail.com>"]
edition = "2018"
repository = "https://github.com/celsojr/rust-wasm"
license = "Apache or MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
log = "0.4.20"
console_log = "1.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
